@@ -36,7 +36,6 @@ import org.junit.jupiter.api.Test;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -47,27 +46,30 @@ public class RequestConvertToJsonTest {
     public void testAllRequestTypesHandled() {
         List<String> unhandledKeys = new ArrayList<>();
         for (ApiKeys key : ApiKeys.values()) {
-            short version = key.latestVersion();
-            ApiMessage message;
-            if (key == ApiKeys.DESCRIBE_ACLS) {
-                message = ApiMessageType.fromApiKey(key.id).newRequest();
-                DescribeAclsRequestData requestData = (DescribeAclsRequestData) message;
-                requestData.setPatternTypeFilter((byte) 1);
-                requestData.setResourceTypeFilter((byte) 1);
-                requestData.setPermissionType((byte) 1);
-                requestData.setOperation((byte) 1);
-            } else {
-                message = ApiMessageType.fromApiKey(key.id).newRequest();
-            }
-            ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
-            AbstractRequest req = AbstractRequest.parseRequest(key, version, bytes).request;
-            try {
-                RequestConvertToJson.request(req);
-            } catch (IllegalStateException e) {
-                unhandledKeys.add(key.toString());
+            if (key.hasValidVersion()) {
+                short version = key.latestVersion();
+                ApiMessage message;
+                if (key == ApiKeys.DESCRIBE_ACLS) {
+                    message = ApiMessageType.fromApiKey(key.id).newRequest();
+                    DescribeAclsRequestData requestData = (DescribeAclsRequestData) message;
+                    requestData.setPatternTypeFilter((byte) 1);
+                    requestData.setResourceTypeFilter((byte) 1);
+                    requestData.setPermissionType((byte) 1);
+                    requestData.setOperation((byte) 1);
+                } else {
+                    message = ApiMessageType.fromApiKey(key.id).newRequest();
+                }
+                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                AbstractRequest req = AbstractRequest.parseRequest(key, version, bytes).request;
+                try {
+                    RequestConvertToJson.request(req);
+                } catch (IllegalStateException e) {
+                    e.printStackTrace();
+                    unhandledKeys.add(key.toString());
+                }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled request keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled request keys");
     }
 
     @Test
@@ -101,17 +103,19 @@ public class RequestConvertToJsonTest {
     public void testAllResponseTypesHandled() {
         List<String> unhandledKeys = new ArrayList<>();
         for (ApiKeys key : ApiKeys.values()) {
-            short version = key.latestVersion();
-            ApiMessage message = ApiMessageType.fromApiKey(key.id).newResponse();
-            ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
-            AbstractResponse res = AbstractResponse.parseResponse(key, bytes, version);
-            try {
-                RequestConvertToJson.response(res, version);
-            } catch (IllegalStateException e) {
-                unhandledKeys.add(key.toString());
+            if (key.hasValidVersion()) {
+                short version = key.latestVersion();
+                ApiMessage message = ApiMessageType.fromApiKey(key.id).newResponse();
+                ByteBuffer bytes = MessageUtil.toByteBuffer(message, version);
+                AbstractResponse res = AbstractResponse.parseResponse(key, bytes, version);
+                try {
+                    RequestConvertToJson.response(res, version);
+                } catch (IllegalStateException e) {
+                    unhandledKeys.add(key.toString());
+                }
             }
         }
-        assertEquals(Collections.emptyList(), unhandledKeys, "Unhandled response keys");
+        assertEquals(List.of(), unhandledKeys, "Unhandled response keys");
     }
 
     @Test
